src/styles/globals.css
*,
::after,
::before {
  box-sizing: border-box;
}

:root {
  --primary-color: #071e3d;
  --secondary-color: #1f4287;
  --terciary-color: #278ea5;
  --complement-color: #21e6c1;
}

html,
body {
  padding: 0;
  margin: 0;

  font-family: Poppins, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

html {
  color-scheme: dark;

  color: white;
  background-color: #000;
}

body {
  margin: auto;

  max-width: 1400px;

  background-color: var(--primary-color);
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

img {
  max-width: 100%;
  height: auto;
}

hr {
  margin: 2rem auto;
  opacity: 0.8;
}

h1 {
  font-size: 2.5rem;
}

/* UTILITIY CLASSES */

.text-highlighted {
  color: var(--complement-color);
}

.text-bold {
  font-weight: 600;
}

.text-opaque {
  opacity: 0.7;
}

.text-italic {
  font-style: italic;
}

.text-center {
  text-align: center;
}

.text-outlined {
  position: relative;

  width: fit-content;

  font-size: 2rem;
}

.text-outlined::after {
  content: "";

  position: absolute;
  bottom: 0;
  left: 0;

  width: 100%;
  height: 2px;
  opacity: 0.8;

  background-color: #fff;
}

.max-width-800 {
  max-width: 800px;
}

